--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>1`
+	<head>
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
 		<title>Portfolio's Julie</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -21,11 +25,11 @@
 						<h1><a href="index.html">Julie's Portfolio</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="single.html">About</a></li>
+								<li><a href="#">Projects</a></li>
+								<li><a href="#">CV</a></li>
+								<li><a href="#">Contact</a></li>
+								<li><a href="#">Medium</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
