--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<link rel="icon" type="images/favicon-32x32.png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 		<title>Portfolio's Julie</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
