--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<section id="intro">
 								<a href="#" class="logo"><img src="images/android-chrome-192x192.png" alt="" /></a>
 								<header>
-									<h2>Future Imperfect</h2>
-									<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+									<h2>Hello World, I'm Julie! </h2>
+									<p>I'm a passionate digital creator with interest in VR & XR. </a></p>
 								</header>
 							</section>
 
