--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 						</nav>
 					</header>
 
-				<!-- Menu -->
+				<!-- Menu 
 					<section id="menu">
-
-						<!-- Search -->
+							-->
+						<!-- Search
 							<section>
 								<form class="search" method="get" action="#">
 									<input type="text" name="query" placeholder="Search" />
 								</form>
-							</section>
+							</section> -->
 
-						<!-- Links -->
+						<!-- Links 
 							<section>
 								<ul class="links">
 									<li>
@@ -83,15 +83,16 @@
 									</li>
 								</ul>
 							</section>
+										-->
 
 						<!-- Actions 
 							<section>
 								<ul class="actions stacked">
 									<li><a href="#" class="button large fit">Log In</a></li>
 								</ul>
-							</section> -->
+							</section> 
 
-					</section>
+					</section> -->
 
 				<!-- Main -->
 					<div id="main">
@@ -499,7 +500,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="images/android-chrome-192x192.png" alt="" /></a>
+								<a href="#" class="logo"><img src="images/android-chrome-512x512.png" alt="" /></a>
 								<header>
 									<h2>Hello World, I'm Julie! </h2>
 									<p>I'm a passionate digital creator with interest in VR & XR. </a></p>
