Get search and menu off

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							</ul>
 						</nav>
 						<nav class="main">
-							<ul>
+							<!--<ul>
 								<li class="search">
 									<a class="fa-search" href="#search">Search</a>
 									<form id="search" method="get" action="#">
@@ -42,7 +42,7 @@
 								</li>
 							</ul>
 						</nav>
-					</header>
+					</header>  -->
 
 				<!-- Menu 
 					<section id="menu">
