--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<section id="footer">
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-linked-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="#" class="fa-brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
