--- a/index.html
+++ b/index.html
@@ -116,9 +116,8 @@
 										<li><a href="single.html" class="button large">Continue Reading</a></li>
 									</ul>
 									<ul class="stats">
-										<li><a href="#">General</a></li>
-										<li><a href="#" class="icon solid fa-heart">28</a></li>
-										<li><a href="#" class="icon solid fa-comment">128</a></li>
+										<li><a>VR experience</a></li>
+										
 									</ul>
 								</footer>
 							</article>
@@ -141,9 +140,7 @@
 										<li><a href="single.html" class="button large">Continue Reading</a></li>
 									</ul>
 									<ul class="stats">
-										<li><a href="#">General</a></li>
-										<li><a href="#" class="icon solid fa-heart">28</a></li>
-										<li><a href="#" class="icon solid fa-comment">128</a></li>
+										<li><a> Game Design Prototype</a></li>
 									</ul>
 								</footer>
 							</article>
@@ -167,9 +164,8 @@
 										<li><a href="single.html" class="button large">Continue Reading</a></li>
 									</ul>
 									<ul class="stats">
-										<li><a href="#">General</a></li>
-										<li><a href="#" class="icon solid fa-heart">28</a></li>
-										<li><a href="#" class="icon solid fa-comment">128</a></li>
+										<li><a>Virtual Exhibition</a></li>
+										
 									</ul>
 								</footer>
 							</article>
