--- a/index.html
+++ b/index.html
@@ -499,7 +499,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<a href="#" class="logo"><img src="images/android-chrome-512x512.png" alt="" /></a>
 								<header>
 									<h2>Hello World, I'm Julie! </h2>
-									<p>I'm a passionate digital creator with interest in VR & XR. </a></p>
+									<p class="bio-parag">I'm a passionate digital creator with interest in UX interactive design and VR/XR technology.
+										Throughout the studies  </a></p>
 								</header>
 							</section>
 
